schema: Conditionally enable serde support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ pbjson-build = "0.6.2"
 pbjson-types = "0.6.0"
 prost = "0.12.6"
 prost-build = "0.12.6"
+prost-types = "0.12.6"
 serde = "1.0.211"
 serde_yaml = "0.9.34"
 thiserror = "1.0.64"
