--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,3 +30,23 @@ jobs:
       run: cargo build --all --features=tokio
     - name: Run tests
       run: cargo test --all --features=tokio
+  build-serde:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+    - name: Build
+      run: cargo build --all --features=serde
+    - name: Run tests
+      run: cargo test --all --features=serde
+  build-serde-tokio:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+    - name: Build
+      run: cargo build --all --features=serde,tokio
+    - name: Run tests
+      run: cargo test --all --features=serde,tokio
