--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,16 @@ jobs:
       run: cargo build --all
     - name: Run tests
       run: cargo test --all
+  build-no-default-features:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+    - name: Build
+      run: cargo build --all --no-default-features
+    - name: Run tests
+      run: cargo test --all --no-default-features
   build-tokio:
     runs-on: ubuntu-latest
     steps:
