--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "1.0.90"
 bytes = "1.8.0"
 cxx = { version = "1.0.129", features = ["c++17"] }
 cxx-build = { version = "1.0.129", features = ["parallel"] }
+dashmap = "6.1.0"
 futures = "0.3.31"
 nix =  "0.29.0"
 pbjson = "0.6.0"
